tests/includes/invalid/missing_file.jute
include "does_not_exist.jute";

module test {
    class A {
        int x;
    }
}
